<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/TextHeading"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:text="@string/first_button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_view_margin"
            android:onClick="openFirstApp"
            style="@style/UdacityButton" />

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:text="@string/second_button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_view_margin"
            android:onClick="openSecondApp"
            style="@style/UdacityButton"/>

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:text="@string/third_button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_view_margin"
            android:onClick="openThirdApp"
            style="@style/UdacityButton"/>

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fourth_button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_view_margin"
            android:onClick="openFourthApp"
            style="@style/UdacityButton"/>

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fifth_button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_view_margin"
            android:onClick="openFifthApp"
            style="@style/UdacityButton"/>

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:text="@string/sixth_button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_view_margin"
            android:onClick="openSixthApp"
            style="@style/SpecialButton"/>

    </LinearLayout>

</RelativeLayout>
